# researchmate

./: .env.example  .gitignore  README.md  demo_commands.md  langgraph.json  main.py  pyproject.toml
app/: agent.py  chat_graph.py  compare.py  config.py  graph.py  ingest.py  llm.py  openai_compare.py  openai_qa.py  openai_summarizer.py  review.py  schemas.py  storage.py  summarizer.py  tools.py  vector_store.py
researchmate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
