[project]
name = "researchmate"
version = "0.1.0"
description = "Agentic literature review assistant built with LangChain and LangGraph"
requires-python = ">=3.12,<3.14"
dependencies = [
    "langchain>=1.1.3",
    "langchain-openai>=1.1.1",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "langgraph-cli>=0.4.9",
    "python-dotenv>=1.2.0",
    "pydantic>=2.0.0",
    "pypdf>=6.2.0",
    "jupyterlab>=4.5.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]